Backend/error_v2.log
node : file:///C:/Users/sl2yz/W
orkspace/Enginev1/Backend/src/c
ontrollers/chatController.js:35
At line:1 char:1
+ node src/server.js 2>&1 | 
Out-File -FilePath 
error_v2.log -Encoding u ...
+ ~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          :  
   NotSpecified: (file:///C:/  
  User...ontroller.js:35:Str   
 ing) [], RemoteException
    + FullyQualifiedErrorId :  
   NativeCommandError
 
export { getMessagesByProject, 
getGeneralMessages, 
sendMessage };
                               
^^^^^^^^^^^^^^^^^^

SyntaxError: Export 
'getGeneralMessages' is not 
defined in module
    at compileSourceTextModule 
(node:internal/modules/esm/util
s:346:16)
    at 
ModuleLoader.moduleStrategy (no
de:internal/modules/esm/transla
tors:107:18)
    at #translate (node:interna
l/modules/esm/loader:546:20)
    at afterLoad (node:internal
/modules/esm/loader:596:29)
    at 
ModuleLoader.loadAndTranslate (
node:internal/modules/esm/loade
r:601:12)
    at #createModuleJob (node:i
nternal/modules/esm/loader:624:
36)
    at 
#getJobFromResolveResult (node:
internal/modules/esm/loader:343
:34)
    at ModuleLoader.getModuleJo
bForImport (node:internal/modul
es/esm/loader:311:41)

Node.js v22.20.0
